Revert "Fixed HTML imports"
This reverts commit 1e949fd8773a706d0ede2ae210908cd20db20076.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,31 +39,31 @@
     {% if jekyll.environment == "production" %}
     <script>{% include js/webcomponents-lite.min.js %}</script>
     {% else %}
-    <script src="/assets/components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script>
+    <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script>
     {% endif %}
-    <link rel="import" href="/assets/components/app-layout/app-layout.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/app-layout/app-scroll-effects/app-scroll-effects.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/iron-grid/iron-grid.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/iron-icons/iron-icons.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/iron-icons/hardware-icons.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/material-design-icons/material-design-icons.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/paper-button/paper-button.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/paper-icon-button/paper-icon-button.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/paper-menu/paper-menu.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/paper-item/paper-item.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/paper-item/paper-icon-item.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/paper-material/paper-material.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/paper-card/paper-card.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/paper-input/paper-input.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/paper-input/paper-textarea.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/paper-toast/paper-toast.min.html?v={{ asset_version }}">
-    <link rel="import" href="/assets/components/re-captcha/re-captcha.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/app-layout/app-layout.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/iron-grid/iron-grid.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/iron-icons/iron-icons.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/iron-icons/hardware-icons.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/material-design-icons/material-design-icons.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/paper-button/paper-button.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/paper-menu/paper-menu.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/paper-item/paper-item.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/paper-item/paper-icon-item.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/paper-material/paper-material.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/paper-card/paper-card.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/paper-input/paper-input.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/paper-input/paper-textarea.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/paper-toast/paper-toast.min.html?v={{ asset_version }}">
+    <link rel="import" href="/bower_components/re-captcha/re-captcha.min.html?v={{ asset_version }}">
 
     <!-- Styles -->
     {% if jekyll.environment == "production" %}
     <style>{% include css/styles.min.css %}</style>
     {% else %}
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="/res/css/styles.min.css">
     {% endif %}
 
 </head>
