Revert "Updated components, renamet asset folder, added Gemfile, added Travis.ci integration"
This reverts commit 6de1dfed4bcad29cc6158090cf62886ad1ff5fd8.

--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -1,4 +1,4 @@
-<div class="cover" id="home" style="background-image: url('{% if jekyll.environment == 'production' %}{% include images/title.base64 %}{% else %}{{ site.data.cover.image }}{% endif %}')">
+<div class="cover" id="home" style="background-image: url('{% if jekyll.environment == "production" %}{% include images/title.base64 %}{% else %}{{ site.data.cover.image }}{% endif %}')">
     <div class="cover-inner">
         <img src="{{ site.data.cover.logo }}">
         <h1>{{ site.data.cover.title }}</h1>
