--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,11 +17,8 @@
     <meta name="revisit-after" content="1 day" />
     {% endif %}
 
-    <!-- Meta information -->
+    <!-- Meta/SEO information -->
     {% include meta.html %}
-
-    <!-- SEO information -->
-    {% seo %}
 
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v={{ asset_version }}">
