Added contact form

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,7 @@
 
     <!-- Web components -->
     {% if jekyll.environment == "production" %}
-    <script>{% include js/webcomponents-lite.min.js %}</script>
+    <script>{% include js/webcomponents.min.js %}</script>
     {% else %}
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script>
     {% endif %}
