--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,25 +39,29 @@
     {% if jekyll.environment == "production" %}
     <script>{% include js/webcomponents.min.js %}</script>
     {% else %}
-    <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script>
+    <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
     {% endif %}
-    <link rel="import" href="/bower_components/app-layout/app-layout.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/iron-grid/iron-grid.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/iron-icons/iron-icons.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/iron-icons/hardware-icons.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/material-design-icons/material-design-icons.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/paper-button/paper-button.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/paper-menu/paper-menu.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/paper-item/paper-item.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/paper-item/paper-icon-item.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/paper-material/paper-material.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/paper-card/paper-card.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/paper-input/paper-input.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/paper-input/paper-textarea.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/paper-toast/paper-toast.min.html?v={{ asset_version }}">
-    <link rel="import" href="/bower_components/re-captcha/re-captcha.min.html?v={{ asset_version }}">
+    <!-- Base components -->
+    <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
+    <link rel="import" href="/bower_components/iron-icons/hardware-icons.html">
+    <link rel="import" href="/bower_components/iron-grid/iron-grid.html">
+    <!-- Layout components -->
+    <link rel="import" href="/bower_components/app-layout/app-layout.html">
+    <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
+    <!-- Material Design components -->
+    <link rel="import" href="/bower_components/paper-material/paper-material.html">
+    <link rel="import" href="/bower_components/paper-card/paper-card.html">
+    <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
+    <link rel="import" href="/bower_components/paper-button/paper-button.html">
+    <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
+    <link rel="import" href="/bower_components/paper-menu/paper-menu.html">
+    <link rel="import" href="/bower_components/paper-item/paper-item.html">
+    <link rel="import" href="/bower_components/paper-item/paper-icon-item.html">
+    <link rel="import" href="/bower_components/paper-input/paper-input.html">
+    <link rel="import" href="/bower_components/paper-input/paper-textarea.html">
+    <link rel="import" href="/bower_components/material-design-icons/material-design-icons.html">
+    <!-- Extra components -->
+    <link rel="import" href="/bower_components/re-captcha/re-captcha.html">
 
     <!-- Styles -->
     {% if jekyll.environment == "production" %}
