Moved images, added social banners

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@ layout: compress
                     <a href="/privacy/" title="Privacy">Privacy</a>
                 </section>
                 <section>
-                    Made with ♥ using
+                    Made with ❤ using
                     <a href="https://www.polymer-project.org/1.0/" title="Polymer Project" target="_blank">Polymer</a>
                     and
                     <a href="https://jekyllrb.com/" title="Jekyll Static Site Generator" target="_blank">Jekyll</a>.
